kubernetes/openkm-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: openkm
  labels:
    app: openkm
spec:
  selector:
    app: openkm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: web
